# agent-recall

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  RELEASE_NOTES.md  TODO.md  append_prds.py  fix_prds.py  pyproject.toml  update_prd_ids.py
.agent/: GUARDRAILS.md  RECENT.md  STYLE.md
.agent/ralph/iterations/: current.json
.github/workflows/: ci.yml
agent_recall/: README.md
agent_recall/ralph/: agent-prompt.md  prd.json  progress.txt
agent_recall/ralph/.runtime/: prd-filtered.json
agent_recall/scripts/: copy-to-self-docs.sh  ralph-agent-recall-loop.sh  ralph-agent-recall-once.sh
docs/: BENCHMARKS.md  cli-reference.md  embeddings-guide.md  getting-started.md  memory-pack-format.md  telemetry.md
docs/api/: by-source-session.md
docs/playbooks/: memory-backend-rollout.md
docs/schemas/: external-compaction-notes.schema.json
docs/testing/: external-compaction-matrix.md
scripts/: evaluate_feedback_quality.py
src/agent_recall/: __init__.py
src/agent_recall/cli/: __init__.py  app_commands.py  banner.py  command_contract.py  main.py  ralph.py  runtime.py  stream_pipeline.py  textual_tui.py  theme.py
src/agent_recall/cli/commands/: context_flow.py  external_compaction_queue_flow.py  status_flow.py  sync_flow.py
src/agent_recall/cli/support/: errors.py  output.py
src/agent_recall/cli/tui/: __init__.py  app.py  constants.py  delta.py  router.py  types.py
src/agent_recall/core/: __init__.py  adapters.py  background_sync.py  compact.py  config.py  config_keys.py  context.py  embedding_diagnostics.py  embedding_indexer.py  embeddings.py  extract.py  guardrail_enforcement.py  ingest.py  log.py  memory_pack.py  onboarding.py  ordering.py  pr_context.py  retrieval_feedback.py  retrieve.py  rule_confidence.py  semantic_embedder.py  session.py  sync.py  telemetry.py  tier_compaction.py  tier_format.py  tier_notes.py  tier_writer.py  topic_threads.py
src/agent_recall/external_compaction/: __init__.py  mcp_server.py  models.py  service.py  write_guard.py
src/agent_recall/ingest/: __init__.py  base.py  claude_code.py  codex.py  cursor.py  health.py  log_watcher.py  opencode.py  sources.py
src/agent_recall/llm/: __init__.py  anthropic.py  base.py  coding_cli.py  google.py  openai_compat.py
src/agent_recall/memory/: __init__.py  agent_memory.py  embedding_provider.py  local_model.py  migration.py  policy.py  provisioning.py  store.py  vector_store.py
src/agent_recall/ralph/: __init__.py  context_refresh.py  costs.py  extraction.py  forecast.py  hooks.py  iteration_store.py  loop.py  notifications.py  opencode_plugin.py  prd_archive.py  synthesis.py
src/agent_recall/storage/: __init__.py  base.py  curation_queue.py  files.py  http_server.py  metadata.py  models.py  normalize.py  remote.py  sqlite.py  utils.py
src/agent_recall/storage/migrations/: migrate_to_embeddings.py
src/agent_recall/storage/sqlite_domains/: __init__.py  external_compaction.py  retrieval_feedback.py  rule_confidence.py  (+1 more)
src/agent_recall/templates/: GUARDRAILS.md  RECENT.md  RULES.md  STYLE.md  config.yaml
tests/: conftest.py  test_attribution.py  test_background_sync.py  test_checkpoints.py  test_cli.py  test_codex_fixtures.py  test_command_contract.py  test_compact.py  test_context_refresh.py  test_delta.py  test_embedding_diagnostics.py  test_embedding_indexer.py  test_embedding_provider.py  test_external_compaction.py  test_external_compaction_matrix.py  test_external_compaction_queue_flow.py  test_external_compaction_write_guard.py  test_extraction.py  test_forecast.py  test_google_provider.py  test_guardrail_enforcement.py  test_hybrid_search.py  test_ingest.py  test_iteration_store.py  test_llm.py  test_log.py  test_memory_migration.py  test_memory_pack.py  test_memory_policy.py  test_memory_provisioning.py  test_memory_store.py  test_models.py  test_onboarding.py  test_pr_context.py  test_prd_archive.py  test_ralph_cli.py  test_ralph_hooks.py  test_ralph_loop.py  test_ralph_weather_cli.py  test_remote_http.py  (+33 more)
tests/benchmarks/: benchmark_embeddings.py
tests/fixtures/codex/: custom_tools.jsonl  legacy_minimal.json  legacy_missing_fields.json  legacy_session.json  malformed_lines.jsonl  minimal_content.jsonl  missing_fields.jsonl  tool_ordering.jsonl  valid_session.jsonl  various_timestamps.jsonl
tests/integration/: test_embedding_e2e.py
tests/storage/: test_replication.py
tests/support/: __init__.py  cli_test_utils.py
tests/unit/core/: conftest.py  test_embedding_indexer.py  test_hybrid_search.py  test_semantic_embedder.py  test_vector_search.py
tests/unit/storage/: test_migration_embeddings.py
(+60 files in other folders)
