[project]
name = "agent-recall"
version = "0.1.0"
description = "Automatic knowledge capture for AI coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Nate Card", email = "natecard.dev@gmail.com" },
]
keywords = ["ai", "agents", "memory", "llm", "coding", "cursor", "claude", "codex", "opencode"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27",
  "packaging>=24.0",
  "typer>=0.9.0",
  "pydantic>=2.0",
  "structlog>=24.0",
  "rich>=13.0",
  "textual>=0.70",
  "pyyaml>=6.0",
  "openai>=1.0",
]

[project.urls]
Homepage = "https://github.com/natecard/agent-recall"
Repository = "https://github.com/natecard/agent-recall"
Documentation = "https://github.com/natecard/agent-recall/blob/main/README.md"
Changelog = "https://github.com/natecard/agent-recall/blob/main/CHANGELOG.md"

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
google = ["google-genai>=1.62"]
all-cloud = [
  "anthropic>=0.40",
  "google-genai>=1.62",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.8",
  "ty>=0.0.1a13",
  "respx>=0.21",
]
all = [
  "anthropic>=0.40",
  "google-genai>=1.62",
]

[project.scripts]
agent-recall = "agent_recall.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_recall"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
